refatoração: padronização de métodos, limpeza de código e melhorias na documentação
- Padronizados os nomes dos métodos para inglês nos controllers, configurações, filtros e serviços
- Removido código desnecessário e comentários redundantes
- Realizada formatação para melhorar legibilidade e consistência
- Adicionados comentários explicativos sobre o funcionamento de cada parte do código
- Testadas as chamadas da API e verificado que tudo está funcionando conforme o esperado