@@ -1,9 +1,10 @@
 package com.entra21.chef_up.services;
 
-import com.entra21.chef_up.dtos.IngredienteUsuario.IngredienteUsuarioResponse;
 import com.entra21.chef_up.dtos.ReceitaUsuario.ReceitaUsuarioRequest;
 import com.entra21.chef_up.dtos.ReceitaUsuario.ReceitaUsuarioResponse;
-import com.entra21.chef_up.entities.*;
+import com.entra21.chef_up.entities.Receita;
+import com.entra21.chef_up.entities.ReceitaUsuario;
+import com.entra21.chef_up.entities.Usuario;
 import com.entra21.chef_up.repositories.ReceitaRepository;
 import com.entra21.chef_up.repositories.ReceitaUsuarioRepository;
 import com.entra21.chef_up.repositories.UsuarioRepository;
@@ -15,97 +16,140 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * Serviço responsável por gerenciar a relação entre Receita e Usuario.
+ */
 @Service
 public class ReceitaUsuarioService {
 
-    private final ReceitaUsuarioRepository receitaUsuarioRepository;
-    private final ReceitaRepository receitaRepository;
-    private final UsuarioRepository usuarioRepository;
-    private final ModelMapper modelMapper;
+    private static final String ERROR_ASSOCIATION_NOT_FOUND = "Associação não encontrada";
+    private static final String ERROR_USER_NOT_FOUND = "Usuário não encontrado";
+    private static final String ERROR_RECIPE_NOT_FOUND = "Receita não encontrada";
+    private static final String ERROR_RECIPE_NOT_OWNED = "Receita não pertence ao usuário";
 
-    public ReceitaUsuarioService(ReceitaUsuarioRepository receitaUsuarioRepository, ReceitaRepository receitaRepository, UsuarioRepository usuarioRepository, ModelMapper modelMapper) {
-        this.receitaUsuarioRepository = receitaUsuarioRepository;
-        this.receitaRepository = receitaRepository;
-        this.usuarioRepository = usuarioRepository;
-        this.modelMapper = modelMapper;
+    private final ReceitaUsuarioRepository recipeUserRepository;
+    private final ReceitaRepository recipeRepository;
+    private final UsuarioRepository userRepository;
+    private final ModelMapper mapper;
+
+    public ReceitaUsuarioService(ReceitaUsuarioRepository recipeUserRepository,
+                                 ReceitaRepository recipeRepository,
+                                 UsuarioRepository userRepository,
+                                 ModelMapper mapper) {
+        this.recipeUserRepository = recipeUserRepository;
+        this.recipeRepository = recipeRepository;
+        this.userRepository = userRepository;
+        this.mapper = mapper;
     }
 
-    public List<ReceitaUsuarioResponse> listarTodos(Integer idUsuario) {
-        return receitaUsuarioRepository.findByUsuarioId(idUsuario)
+    /**
+     * Lista todas as associações entre receita e usuário para um determinado usuário.
+     *
+     * @param userId identificador do usuário
+     * @return lista de ReceitaUsuarioResponse
+     */
+    public List<ReceitaUsuarioResponse> listByUser(Integer userId) {
+        return recipeUserRepository.findByUsuarioId(userId)
                 .stream()
-                .map(etapa -> modelMapper.map(etapa, ReceitaUsuarioResponse.class))
-                .toList();
+                .map(association -> mapper.map(association, ReceitaUsuarioResponse.class))
+                .collect(Collectors.toList());
     }
 
-    public ReceitaUsuarioResponse buscar(Integer idUsuario, Integer idReceitaUsuario) {
-        ReceitaUsuario receitaUsuario = receitaUsuarioRepository.findById(idReceitaUsuario)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Associação não encontrada"));
+    /**
+     * Recupera uma associação específica entre receita e usuário.
+     *
+     * @param userId        identificador do usuário
+     * @param associationId identificador da associação
+     * @return DTO da associação encontrada
+     */
+    public ReceitaUsuarioResponse getById(Integer userId, Integer associationId) {
+        ReceitaUsuario association = findByIdOrThrow(associationId);
 
-        // Verifica se a associação pertence ao usuário
-        if (!receitaUsuario.getUsuario().getId().equals(idUsuario)) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Receita não pertence ao usuário");
+        if (!association.getUsuario().getId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, ERROR_RECIPE_NOT_OWNED);
         }
 
-        return modelMapper.map(receitaUsuario, ReceitaUsuarioResponse.class);
+        return mapper.map(association, ReceitaUsuarioResponse.class);
     }
 
-    public ReceitaUsuarioResponse criar(Integer idUsuario, ReceitaUsuarioRequest request) {
-        Usuario usuario = usuarioRepository.findById(idUsuario)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
+    /**
+     * Cria uma nova associação entre receita e usuário.
+     *
+     * @param userId  identificador do usuário
+     * @param request DTO com o ID da receita e foto do prato
+     * @return DTO da associação criada
+     */
+    public ReceitaUsuarioResponse create(Integer userId, ReceitaUsuarioRequest request) {
+        Usuario user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_USER_NOT_FOUND));
 
-        Receita receita = receitaRepository.findById(request.getIdReceita())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Receita não encontrado"));
+        Receita recipe = recipeRepository.findById(request.getIdReceita())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_RECIPE_NOT_FOUND));
 
-        ReceitaUsuario receitaUsuario = new ReceitaUsuario();
-        receitaUsuario.setReceita(receita);
-        receitaUsuario.setUsuario(usuario);;
-        receitaUsuario.setDataConclusao(LocalDateTime.now());
-        receitaUsuario.setFotoPrato(request.getFotoPrato());
+        ReceitaUsuario newAssociation = new ReceitaUsuario();
+        newAssociation.setUsuario(user);
+        newAssociation.setReceita(recipe);
+        newAssociation.setDataConclusao(LocalDateTime.now());
+        newAssociation.setFotoPrato(request.getFotoPrato());
 
-        ReceitaUsuario salvo = receitaUsuarioRepository.save(receitaUsuario);
-
-        return modelMapper.map(salvo, ReceitaUsuarioResponse.class);
+        ReceitaUsuario saved = recipeUserRepository.save(newAssociation);
+        return mapper.map(saved, ReceitaUsuarioResponse.class);
     }
 
-    public ReceitaUsuarioResponse alterar(Integer idUsuario, Integer idReceitaUsuario, ReceitaUsuarioRequest request) {
-        ReceitaUsuario receitaUsuario = receitaUsuarioRepository.findById(idReceitaUsuario)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Associação não encontrada"));
+    /**
+     * Atualiza uma associação existente entre receita e usuário.
+     *
+     * @param userId        identificador do usuário
+     * @param associationId identificador da associação
+     * @param request       DTO com o novo ID da receita
+     * @return DTO da associação atualizada
+     */
+    public ReceitaUsuarioResponse update(Integer userId, Integer associationId, ReceitaUsuarioRequest request) {
+        ReceitaUsuario association = findByIdOrThrow(associationId);
 
-        // Verifica se a associação pertence ao usuário
-        if (!receitaUsuario.getUsuario().getId().equals(idUsuario)) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Receita não pertence ao usuário");
+        if (!association.getUsuario().getId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, ERROR_RECIPE_NOT_OWNED);
         }
 
-        // Atualiza os dados do adjetivo associado, se necessário
-        if (request.getIdReceita() != null && !request.getIdReceita().equals(receitaUsuario.getReceita().getId())) {
-            Receita novaReceita = receitaRepository.findById(request.getIdReceita())
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Nova Receita não encontrada"));
-            receitaUsuario.setReceita(novaReceita);
+        if (request.getIdReceita() != null && !request.getIdReceita().equals(association.getReceita().getId())) {
+            Receita newRecipe = recipeRepository.findById(request.getIdReceita())
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Nova receita não encontrada"));
+            association.setReceita(newRecipe);
         }
 
-        // Salva as alterações
-        ReceitaUsuario atualizado = receitaUsuarioRepository.save(receitaUsuario);
-
-        return modelMapper.map(atualizado, ReceitaUsuarioResponse.class);
+        ReceitaUsuario updated = recipeUserRepository.save(association);
+        return mapper.map(updated, ReceitaUsuarioResponse.class);
     }
 
-
+    /**
+     * Remove uma associação entre receita e usuário.
+     *
+     * @param userId        identificador do usuário
+     * @param associationId identificador da associação
+     * @return DTO da associação removida
+     */
     @Transactional
-    public ReceitaUsuarioResponse remover(Integer idUsuario, Integer idReceitaUsuario) {
-        /// Busca pelo ID ou lança 404
-        ReceitaUsuario receitaUsuario = receitaUsuarioRepository.findById(idReceitaUsuario)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Associação não encontrada"));
+    public ReceitaUsuarioResponse delete(Integer userId, Integer associationId) {
+        ReceitaUsuario association = findByIdOrThrow(associationId);
 
-        // Verifica se a associação pertence ao usuário informado
-        if (!receitaUsuario.getUsuario().getId().equals(idUsuario)) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Receita não pertence ao usuário");
+        if (!association.getUsuario().getId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, ERROR_RECIPE_NOT_OWNED);
         }
 
-        /// Deleta pelo ID
-        receitaUsuarioRepository.deleteById(idReceitaUsuario);
+        recipeUserRepository.deleteById(associationId);
+        return mapper.map(association, ReceitaUsuarioResponse.class);
+    }
 
-        /// Retorna o DTO do adjetivo deletado
-        return modelMapper.map(receitaUsuario, ReceitaUsuarioResponse.class);
+    /**
+     * Busca uma associação entre receita e usuário ou lança exceção 404.
+     *
+     * @param id identificador da associação
+     * @return entidade ReceitaUsuario
+     */
+    private ReceitaUsuario findByIdOrThrow(Integer id) {
+        return recipeUserRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_ASSOCIATION_NOT_FOUND));
     }
 }
