@@ -1,13 +1,11 @@
 package com.entra21.chef_up.services;
 
-
 import com.entra21.chef_up.dtos.ProgressoUsuario.ProgressoUsuarioRequest;
 import com.entra21.chef_up.dtos.Usuario.UsuarioRequest;
 import com.entra21.chef_up.dtos.Usuario.UsuarioResponse;
 import com.entra21.chef_up.entities.ProgressoUsuario;
 import com.entra21.chef_up.entities.Pronome;
 import com.entra21.chef_up.entities.Usuario;
-import com.entra21.chef_up.repositories.ProgressoUsuarioRepository;
 import com.entra21.chef_up.repositories.UsuarioRepository;
 import jakarta.transaction.Transactional;
 import org.modelmapper.ModelMapper;
@@ -18,93 +16,144 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * Serviço responsável pelas operações CRUD de usuário.
+ */
 @Service
 public class UsuarioService {
-    private final UsuarioRepository usuarioRepository;
+
+    private static final String ERROR_USER_NOT_FOUND = "Usuário não encontrado";
+
+    private final UsuarioRepository userRepository;
     private final ModelMapper modelMapper;
     private final PasswordEncoder passwordEncoder;
-    private final PronomeService pronomeService;
+    private final PronomeService pronounService;
 
-    public UsuarioService(UsuarioRepository usuarioRepository, ModelMapper modelMapper, PasswordEncoder passwordEncoder, ProgressoUsuarioRepository progressoUsuarioRepository, PronomeService pronomeService) {
-        this.usuarioRepository = usuarioRepository;
+    public UsuarioService(UsuarioRepository userRepository,
+                          ModelMapper modelMapper,
+                          PasswordEncoder passwordEncoder,
+                          PronomeService pronounService) {
+        this.userRepository = userRepository;
         this.modelMapper = modelMapper;
         this.passwordEncoder = passwordEncoder;
-        this.pronomeService = pronomeService;
+        this.pronounService = pronounService;
     }
 
-    /// Busca todos usuários do banco e cria um stream para processar um a um
-    public List<UsuarioResponse> listarTodos() {
-        return usuarioRepository.findAll().stream()
-                .map(u -> {
-                    UsuarioResponse usuarioResponse = modelMapper.map(u, UsuarioResponse.class);
-
-                    /// Mapear pronome manualmente, pois o modelmapper não consegue listar objetos complexos
-                    usuarioResponse.setPronome(pronomeService.mapParaResponse(u.getPronome()));
-
-                    return usuarioResponse;
-                }).toList();
+    /**
+     * Retorna todos os usuários cadastrados, mapeando também seus pronomes.
+     *
+     * @return lista de UsuarioResponse
+     */
+    public List<UsuarioResponse> listAll() {
+        return userRepository.findAll()
+                .stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
-
-    public UsuarioResponse buscar(Integer id) {
-        Usuario usuario = usuarioRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
-
-        return modelMapper.map(usuario, UsuarioResponse.class);
+    /**
+     * Busca um usuário pelo seu identificador.
+     *
+     * @param id identificador do usuário
+     * @return DTO contendo os dados do usuário
+     * @throws ResponseStatusException se o usuário não for encontrado
+     */
+    public UsuarioResponse getById(Integer id) {
+        Usuario user = findEntityById(id);
+        return toResponse(user);
     }
 
-    public UsuarioResponse criar(UsuarioRequest request) {
+    /**
+     * Cria um novo usuário, inicializa seu progresso e criptografa a senha.
+     *
+     * @param request DTO contendo os dados de criação
+     * @return DTO do usuário criado
+     */
+    @Transactional
+    public UsuarioResponse create(UsuarioRequest request) {
+        Usuario user = toEntity(request);
+        user.setDataCadastro(LocalDateTime.now());
+        user.setSenhaHash(passwordEncoder.encode(user.getSenhaHash()));
 
-        // Mapeia o request para a entidade Usuario
-        Usuario usuario = modelMapper.map(request, Usuario.class);
-        usuario.setDataCadastro(LocalDateTime.now());
-        usuario.setSenhaHash(passwordEncoder.encode(usuario.getSenhaHash()));
-        usuario.setId(null);
+        ProgressoUsuario progress = new ProgressoUsuario();
+        progress.setNivel(1);
+        progress.setXp(0);
+        progress.setAtualizadoEm(LocalDateTime.now());
 
-        // Cria o progresso do usuário
-        ProgressoUsuario progresso = new ProgressoUsuario();
-        progresso.setNivel(1);
-        progresso.setXp(0);
-        progresso.setAtualizadoEm(LocalDateTime.now());
+        user.setProgressoUsuario(progress);
+        progress.setUsuario(user);
 
-        // Estabelece a relação bidirecional
-        usuario.setProgressoUsuario(progresso);
-        progresso.setUsuario(usuario);
-
-        // Salva o usuário e o progresso em cascata
-        Usuario usuarioSalvo = usuarioRepository.save(usuario);
-
-        // Retorna o DTO
-        return modelMapper.map(usuarioSalvo, UsuarioResponse.class);
+        Usuario saved = userRepository.save(user);
+        return toResponse(saved);
     }
 
+    /**
+     * Atualiza nome e pronome de um usuário existente.
+     *
+     * @param id      identificador do usuário a ser atualizado
+     * @param request DTO contendo os novos dados
+     * @return DTO do usuário atualizado
+     * @throws ResponseStatusException se o usuário não for encontrado
+     */
+    public UsuarioResponse update(Integer id, UsuarioRequest request) {
+        Usuario user = findEntityById(id);
 
-    public UsuarioResponse alterar(Integer id, UsuarioRequest request) {
-        /// Busca pelo ID ou lança erro 404
-        Usuario alterar = usuarioRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
+        user.setNome(request.getNome());
+        Pronome pronoun = pronounService.findEntityById(request.getIdPronome());
+        user.setPronome(pronoun);
 
-        /// Atualiza o nome com os dados do request
-        alterar.setNome(request.getNome());
-
-        /// Buscar e atualizar pronome
-        Pronome pronome = pronomeService.buscarPorId(request.getIdPronome());
-        alterar.setPronome(pronome);
-
-        /// Salva a alteração no banco
-        Usuario salvo = usuarioRepository.save(alterar);
-
-        /// Converte a entidade salva para DTO de resposta e retorna
-        return modelMapper.map(salvo, UsuarioResponse.class);
+        Usuario updated = userRepository.save(user);
+        return toResponse(updated);
     }
 
-    public UsuarioResponse remover(Integer id) {
-        /// Busca pelo ID ou lança 404
-        Usuario usuario = usuarioRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
+    /**
+     * Remove um usuário pelo seu identificador.
+     *
+     * @param id identificador do usuário a ser removido
+     * @return DTO do usuário removido
+     * @throws ResponseStatusException se o usuário não for encontrado
+     */
+    public UsuarioResponse delete(Integer id) {
+        Usuario user = findEntityById(id);
+        userRepository.delete(user);
+        return toResponse(user);
+    }
 
-        /// Deleta pelo ID
-        usuarioRepository.deleteById(id);
+    /**
+     * Converte DTO de requisição em entidade Usuario.
+     *
+     * @param request objeto de requisição
+     * @return entidade Usuario mapeada
+     */
+    private Usuario toEntity(UsuarioRequest request) {
+        return modelMapper.map(request, Usuario.class);
+    }
 
-        /// Retorna o DTO do deletado
-        return modelMapper.map(usuario, UsuarioResponse.class);
+    /**
+     * Converte entidade Usuario em DTO de resposta, incluindo pronome.
+     *
+     * @param user entidade persistida
+     * @return DTO de resposta
+     */
+    private UsuarioResponse toResponse(Usuario user) {
+        UsuarioResponse response = modelMapper.map(user, UsuarioResponse.class);
+        response.setPronome(pronounService.toResponse(user.getPronome()));
+        return response;
+    }
+
+    /**
+     * Busca a entidade Usuario pelo ID ou lança ResponseStatusException 404.
+     *
+     * @param id identificador do usuário
+     * @return entidade encontrada
+     * @throws ResponseStatusException se não encontrar a entidade
+     */
+    private Usuario findEntityById(Integer id) {
+        return userRepository.findById(id)
+                .orElseThrow(() ->
+                        new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_USER_NOT_FOUND)
+                );
     }
 }
