@@ -2,7 +2,9 @@ package com.entra21.chef_up.services;
 
 import com.entra21.chef_up.dtos.UtensilioReceita.UtensilioReceitaRequest;
 import com.entra21.chef_up.dtos.UtensilioReceita.UtensilioReceitaResponse;
-import com.entra21.chef_up.entities.*;
+import com.entra21.chef_up.entities.Receita;
+import com.entra21.chef_up.entities.Utensilio;
+import com.entra21.chef_up.entities.UtensilioReceita;
 import com.entra21.chef_up.repositories.ReceitaRepository;
 import com.entra21.chef_up.repositories.UtensilioReceitaRepository;
 import com.entra21.chef_up.repositories.UtensilioRepository;
@@ -13,97 +15,139 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * Serviço responsável por gerenciar a relação entre Utensilio e Receita.
+ */
 @Service
 public class UtensilioReceitaService {
 
-    private final UtensilioRepository utensilioRepository;
-    private final ReceitaRepository receitaRepository;
-    private final UtensilioReceitaRepository utensilioReceitaRepository;
-    private final ModelMapper modelMapper;
+    private static final String ERROR_RECIPE_NOT_FOUND = "Receita não encontrada";
+    private static final String ERROR_UTENSIL_NOT_FOUND = "Utensílio não encontrado";
+    private static final String ERROR_ASSOCIATION_NOT_FOUND = "Utensílio da Receita não encontrado";
+    private static final String ERROR_UTENSIL_NOT_OWNED = "Utensílio não pertence à receita informada";
 
-    public UtensilioReceitaService(UtensilioRepository utensilioRepository, ReceitaRepository receitaRepository, UtensilioReceitaRepository utensilioReceitaRepository, ModelMapper modelMapper) {
-        this.utensilioRepository = utensilioRepository;
-        this.receitaRepository = receitaRepository;
-        this.utensilioReceitaRepository = utensilioReceitaRepository;
-        this.modelMapper = modelMapper;
+    private final UtensilioRepository utensilRepository;
+    private final ReceitaRepository recipeRepository;
+    private final UtensilioReceitaRepository utensilRecipeRepository;
+    private final ModelMapper mapper;
+
+    public UtensilioReceitaService(UtensilioRepository utensilRepository,
+                                   ReceitaRepository recipeRepository,
+                                   UtensilioReceitaRepository utensilRecipeRepository,
+                                   ModelMapper mapper) {
+        this.utensilRepository = utensilRepository;
+        this.recipeRepository = recipeRepository;
+        this.utensilRecipeRepository = utensilRecipeRepository;
+        this.mapper = mapper;
     }
 
-    public List<UtensilioReceitaResponse> listarTodos(Integer idReceita) {
-        return utensilioReceitaRepository.findByReceitaId(idReceita)
+    /**
+     * Lista todas as associações entre utensílio e receita para uma determinada receita.
+     *
+     * @param recipeId identificador da receita
+     * @return lista de UtensilioReceitaResponse
+     */
+    public List<UtensilioReceitaResponse> listByRecipe(Integer recipeId) {
+        return utensilRecipeRepository.findByReceitaId(recipeId)
                 .stream()
-                .map(etapa -> modelMapper.map(etapa, UtensilioReceitaResponse.class))
-                .toList();
+                .map(association -> mapper.map(association, UtensilioReceitaResponse.class))
+                .collect(Collectors.toList());
     }
 
-    public UtensilioReceitaResponse buscarPorId(Integer idReceita, Integer idUtensilioReceita) {
-        UtensilioReceita utensilioReceita = utensilioReceitaRepository.findById(idUtensilioReceita)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Utensílio não encontrado"));
+    /**
+     * Recupera uma associação específica entre utensílio e receita.
+     *
+     * @param recipeId      identificador da receita
+     * @param associationId identificador da associação
+     * @return DTO da associação encontrada
+     */
+    public UtensilioReceitaResponse getById(Integer recipeId, Integer associationId) {
+        UtensilioReceita association = findByIdOrThrow(associationId);
 
-        // Verifica se a etapa pertence à receita informada
-        if (!utensilioReceita.getReceita().getId().equals(idReceita)) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Utensílio não pertence à receita informada");
+        if (!association.getReceita().getId().equals(recipeId)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, ERROR_UTENSIL_NOT_OWNED);
         }
 
-        return modelMapper.map(utensilioReceita, UtensilioReceitaResponse.class);
+        return mapper.map(association, UtensilioReceitaResponse.class);
     }
 
-
+    /**
+     * Cria uma nova associação entre utensílio e receita.
+     *
+     * @param recipeId identificador da receita
+     * @param request  DTO com o ID do utensílio
+     * @return DTO da associação criada
+     */
     @Transactional
-    public UtensilioReceitaResponse criar(Integer idReceita, UtensilioReceitaRequest request) {
-        // Verifica se a receita existe
-        Receita receita = receitaRepository.findById(idReceita)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Receita não encontrada"));
+    public UtensilioReceitaResponse create(Integer recipeId, UtensilioReceitaRequest request) {
+        Receita recipe = recipeRepository.findById(recipeId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_RECIPE_NOT_FOUND));
 
-        // Verifica se o ingrediente existe
-        Utensilio utensilio = utensilioRepository.findById(idReceita)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Utensílio não encontrado"));
+        Utensilio utensil = utensilRepository.findById(request.getIdUtensilio())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_UTENSIL_NOT_FOUND));
 
-        // Cria nova etapa
-        UtensilioReceita novoUtensilioReceita = new UtensilioReceita();
-        novoUtensilioReceita.setReceita(receita);
-        novoUtensilioReceita.setUtensilio(utensilio);
+        UtensilioReceita newAssociation = new UtensilioReceita();
+        newAssociation.setReceita(recipe);
+        newAssociation.setUtensilio(utensil);
 
-        // Salva e retorna
-        UtensilioReceita salva = utensilioReceitaRepository.save(novoUtensilioReceita);
-        return modelMapper.map(salva, UtensilioReceitaResponse.class);
+        UtensilioReceita saved = utensilRecipeRepository.save(newAssociation);
+        return mapper.map(saved, UtensilioReceitaResponse.class);
     }
 
+    /**
+     * Atualiza uma associação existente entre utensílio e receita.
+     *
+     * @param recipeId      identificador da receita
+     * @param associationId identificador da associação
+     * @param request       DTO com o novo ID do utensílio
+     * @return DTO da associação atualizada
+     */
     @Transactional
-    public UtensilioReceitaResponse alterar(Integer idReceita, Integer idUtensilioReceita, UtensilioReceitaRequest request) {
-        // Busca a etapa existente
-        UtensilioReceita utensilioReceitaExistente = utensilioReceitaRepository.findById(idUtensilioReceita)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Utensílio da Receita não encontrado"));
+    public UtensilioReceitaResponse update(Integer recipeId, Integer associationId, UtensilioReceitaRequest request) {
+        UtensilioReceita existing = findByIdOrThrow(associationId);
 
-         Utensilio utensilio = utensilioRepository.findById(request.getIdUtensilio())
+        if (!existing.getReceita().getId().equals(recipeId)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, ERROR_UTENSIL_NOT_OWNED);
+        }
+
+        Utensilio newUtensil = utensilRepository.findById(request.getIdUtensilio())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Novo utensílio não encontrado"));
 
-        // Verifica se a etapa pertence à receita informada
-        if (!utensilioReceitaExistente.getReceita().getId().equals(idReceita)) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Utensílio não pertence à receita informada");
-        }
+        existing.setUtensilio(newUtensil);
 
-        // Atualiza os campos
-        utensilioReceitaExistente.setUtensilio(utensilio);
-
-        // Salva e retorna a entidade atualizada
-        utensilioReceitaRepository.save(utensilioReceitaExistente);
-        return modelMapper.map(utensilioReceitaExistente, UtensilioReceitaResponse.class);
-
+        utensilRecipeRepository.save(existing);
+        return mapper.map(existing, UtensilioReceitaResponse.class);
     }
 
+    /**
+     * Remove uma associação entre utensílio e receita.
+     *
+     * @param recipeId      identificador da receita
+     * @param associationId identificador da associação
+     * @return DTO da associação removida
+     */
     @Transactional
-    public UtensilioReceitaResponse remover(Integer idReceita, Integer idUtensilioReceita) {
-        UtensilioReceita utensilioReceita = utensilioReceitaRepository.findById(idUtensilioReceita)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Utensílio não encontrado"));
+    public UtensilioReceitaResponse delete(Integer recipeId, Integer associationId) {
+        UtensilioReceita association = findByIdOrThrow(associationId);
 
-        // Verifica se o ingrediente pertence à receita informada
-        if (!utensilioReceita.getReceita().getId().equals(idReceita)) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Utensílio não pertence à receita informada");
+        if (!association.getReceita().getId().equals(recipeId)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, ERROR_UTENSIL_NOT_OWNED);
         }
 
-        utensilioReceitaRepository.deleteById(idUtensilioReceita);
+        utensilRecipeRepository.deleteById(associationId);
+        return mapper.map(association, UtensilioReceitaResponse.class);
+    }
 
-        return modelMapper.map(utensilioReceita, UtensilioReceitaResponse.class);
+    /**
+     * Busca uma associação entre utensílio e receita ou lança exceção 404.
+     *
+     * @param id identificador da associação
+     * @return entidade UtensilioReceita
+     */
+    private UtensilioReceita findByIdOrThrow(Integer id) {
+        return utensilRecipeRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, ERROR_ASSOCIATION_NOT_FOUND));
     }
 }
